working on logout

--- a/starter/templates/all-melons.html
+++ b/starter/templates/all-melons.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
 <div id="melon-list">
     {% for melon in melon_list %}
        <div class="card text-center p-2 m-2">
