--- a/starter/templates/cart.html
+++ b/starter/templates/cart.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
 <!-- <div class="d-flex align-items-center justify-content-center py-3"> -->
     {%if session['cart'] %}
     <table class="table table-striped mt-3">
