--- a/starter/templates/melon_details.html
+++ b/starter/templates/melon_details.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block body %}
+{% block content %}
 <div id="melon-list">
 <div class="card text-center">
     <h2>{{ melon.common_name }}</h2>
