--- a/starter/templates/cart.html
+++ b/starter/templates/cart.html
@@ -1,31 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<!-- <div class="d-flex align-items-center justify-content-center py-3"> -->
     {%if session['cart'] %}
-    <table class="table table-striped mt-3">
-        <thead>
-           <tr>
-              <th>Melon Name</th>
-              <th>Quantity</th>
-              <th>Price</th>
-              <th>Total</th>
-           </tr>
-        </thead>
-        <tbody>
-        {% for melon in melons_list %}
-        <tr>
-            <td>{{melon.common_name}}</td>
-            <td>{{melon.quantity}}</td>
-            <td>${{ "%0.2f" | format(melon.price) }}</td>
-            <td>${{ "%0.2f" | format(melon.total_cost) }}</td>
-        </tr>
-        {%endfor%}
-    </table>
-    <h3>Total: ${{ "%0.2f" | format(order_total) }}</h3>
+    <div class="cart py-5">
+        <table class="table table-striped mt-3">
+            <thead>
+            <tr>
+                <th>Melon Name</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Total</th>
+                <!-- <th></th> -->
+            </tr>
+            </thead>
+            <tbody>
+            {% for melon in melons_list %}
+            <tr>
+                <td>{{melon.common_name}}</td>
+                <td>{{melon.quantity}}</td>
+                <td>${{ "%0.2f" | format(melon.price) }}</td>
+                <td>${{ "%0.2f" | format(melon.total_cost) }}</td>
+                <!-- <td><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></td> -->
+            </tr>
+            {%endfor%}
+        </table>
+        <h3>Total: ${{ "%0.2f" | format(order_total) }}</h3>
+        <a href="/empty-cart" class="btn btn-primary">Empty Cart</a>
+    </div>
+
     {%else%}
-        <h2 class="d-flex ">Your cart is empty</h2>
+        <h2 class="text-center py-5">Your cart is empty</h2>
     {%endif%}
-    <a href="/empty-cart" class="btn btn-primary">Empty Cart</a>
-<!-- </div> -->
 {% endblock %}
