--- a/starter/static/site.css
+++ b/starter/static/site.css
@@ -1,19 +1,31 @@
 .melon-image {
-    height: 200px;
+    height: 180px;
     /* width: 200px; */
  }
- 
+ .card{
+   height: 280px;
+   width: 250px;
+ }
+ .details{
+   height: auto;
+   width: 350px;
+ }
  #melon-list{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
  }
- 
  a{
    text-decoration: none;
  }
  li>a{
    margin-right: 20px;
    color: white;
+ }
+ .cart{
+   display: flex;
+   flex-direction: column;
+   align-items: end;
+   justify-content: center;
  }
