--- a/starter/templates/base.html
+++ b/starter/templates/base.html
@@ -1,24 +1,25 @@
 <html>
 <head>
     <title>Shopping Site</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    
     <link rel="stylesheet" href="/static/site.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Ubermelon</a>
+            <a class="navbar-brand" href="{{url_for('homepage')}}">Ubermelon</a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 ">
                 <li><a class="nav text-decoration-none" href="/all-melons">All melons</a></li>
                 <li><a class="nav text-decoration-none" href="/melon">Search</a></li>
                 <li><a class="nav text-decoration-none" href="/cart">Cart</a></li>
+                {% if 'username' in session %}
+                    <li><a class="nav text-decoration-none" href="/logout">Log Out</a></li>
+                {% else %}
+                    <li><a class="nav text-decoration-none " href="/login">Log In</a></li>
+                {% endif %}
             </ul>
-            <div class="collapse navbar-collapse">
-                <div class="navbar-nav ">
-                </div>
-            </div>
         </div>
     </nav>
 
@@ -26,10 +27,16 @@
 
     <!-- This is where the main content goes. -->
     {% for message in get_flashed_messages() %}
-    <p class="alert alert-warning">{{message}}</p>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        {{message}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     {%endfor%}
 
     {% block content %}
+        <div class="container px-3 py-4 d-flex align-items-center justify-content-center">
+        <h1 class="py-5 ">Welcome</h1>
+        </div>
     {% endblock %}
 
   </div>
