--- a/starter/templates/login.html
+++ b/starter/templates/login.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Login</h1>
+<div class="container">
+
+<h2 class="py-4">Login</h2>
 <form action="/login" method="POST">
     {{form.hidden_tag()}}
     {{form.username.label(class="form-label")}}{{form.username(class="form-control")}}
+    <br>
     {{form.password.label(class="form-label")}}{{form.password(class="form-control")}}
     <br>
     {{ form.csrf_token }}
     {{form.submit(class="btn btn-primary")}}
     <!-- or we can write like this <button class="btn btn-primary" type="submit">Sign In</button> -->
 </form>
+</div>
 {% endblock %}
