--- a/starter/templates/melon_details.html
+++ b/starter/templates/melon_details.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
-<div id="melon-list">
-<div class="card text-center">
-    <h2>{{ melon.common_name }}</h2>
-   <img class="melon-image" src="{{ melon.image_url }}">
-   <h5>Price per melon: {{ melon.price_str() }}</h5>
-   <ul>
-   <li>Color: {{ melon.color }}</li>
-   {% if melon.seedless %}
-      <li>Seedless melon</li>
-   {% else %}
-      <li>Warning! This melon has seeds</li>
-   {% endif %}
-   </ul>
-   <a class="btn btn-primary" href="{{ url_for('add_to_cart', melon_id=melon.melon_id) }}">Add to Cart</a>
+<div id="melon-list" class="my-5">
+    <div class="card details text-center ">
+        <div div class="card-body">
+            <img class="melon-image card-img-top" src="{{ melon.image_url }}">
+            <h3 class="card-title">{{ melon.common_name }}</h3>
+            <p class="card-text">Color: {{ melon.color }}</p>
+            {% if melon.seedless %}
+                <p class="card-text">Seedless melon</p>
+            {% else %}
+                <p class="card-text">Warning! This melon has seeds</p>
+            {% endif %}
+            <p class="card-text">Price per melon: {{ melon.price_str() }}</p>
+            <a class="btn btn-primary" href="{{ url_for('add_to_cart', melon_id=melon.melon_id) }}">Add to Cart</a>
+        </div>
+    </div>
 </div>
-</div>
+
 {% endblock %}
